# codelab-scripts-github

./: .gitmodules  MatrixTranspose.patch  README.md  ROCm-install.sh  analyze-log-reconstruct.sh  bisectlog.py  build-install.sh  build-rocm.sh  cmake-update.sh  collapse-same-lines.py  common.sh  dkms.amdgpu.sh  dkms.sh  docker.sh  find-cmp-vbios.sh  gerritt-setup.sh  getPlatformInfo.py  getPlatformInfo.sh  git-co-auto.sh  git-search-branch.sh  github-co.sh  identify-fail-gpu.py  linuxinit.sh  memcat.sh  nanorc.sh  rgp-setup.sh  rocblas-build.sh  rocm-install-1.sh  rocm-install.sh  rocm-source.sh  rocminstall.py  run-test-161253351.sh  sequence-fail-gpu.py  set-pcie-link-speed.sh  set-pcie-speed-1.sh  setup-game-vm-client.sh  setup-game-vm.sh  setup-game-vm.sh.save  setup-static-ips.sh  start-devkit.bat  (+16 more)
amd-scripts/: techsupport_v2.sh
amd-scripts/misc/: get-system-info.py  getPlatformInfo.py
amd-scripts/old/: xgemm-find-max.py
amd-scripts/rocm/: rocm-source.sh
api/: lib.sh  lib_bash.sh  test-api.sh
bug-report/: common.py  compliance_check.py  generate-report-csv.py
bug-report/jira-report/: INTERNAL 2020-09-07T14_15_52-0500-filtered.csv  INTERNAL 2020-09-07T14_15_52-0500.csv  compare-jira-buganizer.py  histogram.py  issuesn12.csv  issuesv10.csv  jira-gibraltar.csv  jira-report-mathplotlib.py  matplotlib-tutorial.py
build-install-scripts/: lib.sh
build-install-scripts/conda/: install_conda.sh  setup-conda-env.sh
build-install-scripts/docker/: docker-install.sh
build-install-scripts/fbgemm/: build_fbgemm.sh  build_fbgemm_gpu.sh  fbgemm.patch  fbgemm_setup.sh  install_fbgemm_gpu.sh  readme
build-install-scripts/gim/: build-install.sh
build-install-scripts/llama/: cmd.md  create-tarball-llama-rocm.sh  create_llama2_tarball.sh  lib.sh  lib_bash.sh  readme.md  run-llama2.sh  setup-llama2-stg1.sh  setup-llama2-stg2.sh  setup.md
build-install-scripts/matplotlib/: matplotlib.sh
build-install-scripts/ninja/: install-ninja.sh
build-install-scripts/py/: install_python.sh
build-install-scripts/pyt/: build-pt.sh  install-pt.sh
build-install-scripts/rock-kernel/: build-rock-kernel-diff-ver.sh
build-install-scripts/rocm/: README.md  build-rocm.py  control  create-deb.sh  docker-rocm-install-package.sh
build-install-scripts/system-service/: set-systemd-service.sh  template.service  test.sh
build-install-scripts/umr/: umr.sh
build-scripts/pt/: build-pt.sh
build-scripts/rocm/: build-rocm.sh  patch.sh
cloud-storage/seafile/: docker-compose.yml  seafile-setenv  seafile-setenv.service
cuda/cublas/: README  cublas-ex.cu
cuda/cuda-programming-model/: README  build.sh  kernels.cu  kernels.h  lib.cu  lib.h  p33.cu
cuda/cuda-programming-model/ch2/: CMakeLists.txt  build.sh  p33.cu  p35.cu  p45.cu  p53.cu
cuda/cudnn/: Makefile
cuda/stream-exercises/: 1-2-gpu-serial.cu  2-2-stream-parallel.cu  3-2-stream-parallel-barrier-and.cu  run.sh  streams_vector.cpp  streams_vector.cu
cuda/streams/: 2-streams.cpp  two-streams.cu
docker-rocm/: Dockerfile  build-docker-rocm-4.3-tf-pytorch.sh  docker-install.sh
docker-scripts/: create-container.sh  docker-install.sh  docker-launch.sh  docker-rocm-tensorflow.sh  init.sh  run-container.sh  setup-docker-rocm.sh
docker-scripts/cuda/: cuda-setup-example-u2204-12.2.sh
gerritt/: gerrit_git_config  gerrit_ssh_config
git-scripts/: gerritt-setup.sh  gerritt-test.sh  git-search-branch.sh
git-scripts/gerritt/: gerrit_ssh_config
git-settings/: .git-credentials  .gitconfig
git-settings/.ssh/: config
gpu-scripts/: rgp-setup.sh
jira/: jira-access-pilot.py
linux-scripts/: linuxinit.sh
log-processing/: bisectlog.py  identify-fail-gpu.py
log-processing/reconstruct/: analyze-log-reconstruct.py  match-string.txt  test-string-3.txt
mini-test-scripts/: 161253351-smu-not-resp.sh  161384191-vf-release-after-xgemm.sh  162454034-libgv-didnot-detect-gpu.sh  171806152-failed-hw-init.sh  amdgpu-reload-loop-w-load.sh  amdgpu_reload.sh  common.sh  gim-reload-smi-lib.sh  memcat-repro-effort.sh  monitor.sh  psp_bl_check.sh  run-test-161253351.sh  wave-state-dump.sh
mini-test-scripts/161253351/: 161253351-smu-not-resp.old  161253351-smu-not-resp.sh  monitor-bob.sh  monitor.c  monitor.sh  run-test-161253351.sh  vk-example-bob.sh  vk-example-launch.sh
mini-test-scripts/178643400/: test-case-attack-sysfs.sh  vk-example-2019-q3.sh
mini-test-scripts/185536737/: monitor.sh  reboot-server-test.sh
mini-test-scripts/191701367/: launch-vk-example-multi-vm.sh  monitor.sh
mini-test-scripts/SWDEV-275248/: vm-start-shutdown.sh
ml/chatpgt/: chat-1.py
ml/h2o/: README  h2oframe.py  prostate.py  setup-h2o.sh.bak
ml/pt2.0/: ex-1.py  ex-11.py  ex-4-demo-speedup.py  readme
ml/triton/: setup.sh
obsolete/: yeti-3dmark-init-setup.sh  yeti-stream-1-pc-config.sh  yeti-stream-2-pc-config-t1.sh  yeti-stream-2-pc-config-t2.sh  yeti-sw-bundle-setup.sh
rocm-scripts/: kfdtest-list.txt  rocm_techsupport.sh  run-kfd-1gpu-dmesg.sh  run-rvs-remote.sh  run-rvs.sh  sdma-dump-umr.sh  techsupport_v2.sh
rocm-scripts/FBA-241/: 2ndary-bus-reset.sh  example-8gpu.cfg  example-bidir.cfg  example.cfg  jtest.sh  link-down-test.sh  reproduce.transfer.bench.2.sh  (+3 more)
rocm/hip/gpu-assembly/: CMakeLists.txt  build-2.sh  build-cmake.sh  build.sh  clean.sh  cmp_args.txt  cmp_args_2.txt  configure.ac  matrix.cpp  vector.c  vector.cpp  vector.h.in
rocm/hip/gpu-assembly/original/: p41.cpp
rocm/hip/gpu-assembly/test/: build.sh  main.c
rocm/rocblas/: CMakeLists.txt  build-rocblas.sh  build-tensile-apps.sh  build.sh  cd_rocblas.sh  cd_tensile.sh  example_sgemm.cpp  example_sgemm_strided_batched.cpp  msgpack  run.sh  sscal.cpp  tensile_dat_reader.cpp  tensile_dat_reader_simple.cpp
rocm/rocblas/build-example_sgemm/: example_sgemm.cpp
rocm/rocblas/build-sscal/: sscal.cpp
rocm/rocblas/tensile/: bisect_rocblas_yaml.sh  filter_idx_7_solidx.sh  mini_yaml.py  output.txt  test.yaml
slurm/: pass.txt  slurm.setup.sh  slurmctld.service  slurmdbd.service
test-scripts/: test-rail.sh  test.sh
tmp-issue-google-142266307-memcat-error/: memcat-repro-effort.sh
(+425 files in other folders)
